# kronos-hrms

./: .env.example  .gitignore  DOC_PROGETTO_CALENDAR.md  DOC_PROGETTO_WALLET.md  README.md  README_SETUP.md  cleanup_imports.py  debug_logs.txt  docker-compose.yml  implementation_plan_microservices_refactor.md  output.txt  package-lock.json  package.json  progetto.md  rebuild.sh
backend/: .env.example  Dockerfile  alembic.ini  celerybeat-schedule  debug_leaves_client.py  pyproject.toml  test_summary.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_data.py  003_seed_contract_types.py  004_national_contracts.py  005_holiday_enhancements.py  006_approvals_schema.py  006_seed_holidays.py  007_contract_levels.py  008_link_contract_types.py  009_enhance_employee_contracts.py  010_balance_transaction_expiry.py  011_balance_tx_remaining.py  012_notification_settings.py  013_calculation_modes.py  014_seed_ced_modes.py  015_link_ced_modes.py  016_smart_deduction_config.py  017_fix_balance_tx_reason.py  018_add_recall_columns.py  019_add_trip_wallets.py  020_seed_wallet_data.py  021_create_calendar_schema.py  (+40 more)
backend/scripts/: bootstrap_system.py  check_alembic.py  check_auth_data.py  check_config.py  check_config_exact.py  check_events.py  check_user_balance.py  debug_api_response.py  debug_event_creation.py  debug_event_retrieval.py  debug_latest_request.py  diag_approvals.py  diag_wallet.py  get_token.py  init_db.py  inspect_config_table.py  inspect_db.py  revert_zombie.py  run_contract_setup.py  seed_admin_role_link.py  seed_calc_modes.py  seed_contracts.py  seed_email_settings.py  seed_enterprise_calendar_data.py  seed_enterprise_data.py  seed_executive_levels.py  seed_hr_training.py  seed_leave.py  seed_leave_types.py  seed_organization.py  seed_rbac.py  seed_templates.py  seed_trips_expenses.py  seed_workflows.py  setup_keycloak_mfa.py  sync_approvals.py  test_all_configs.py  test_calendar_logic.py  test_config_api.py  test_rbac_service.py  (+4 more)
backend/setup_data/: base_email_templates.json  contracts.json  executive_levels.json  holidays.json  leave_types.json  organization.json  users.json  workflows.json
backend/src/: __init__.py  main.py  worker.py
(+500 files in other folders)
